Permite múltiplas origens no CORS, adiciona filtro por tipo de artista na busca e atualiza backend e interface para suportar essa filtragem.